syntax = "proto3";

// specify package for generated java classes
option java_package = "com.exercise.springjava.grpc";

service DemoTest {
  rpc Unary(DemoRequest) returns (DemoResponse) {}
  rpc ServerSideStreaming(DemoRequest) returns (stream DemoResponse) {}
  rpc ClientSideSteraming(stream DemoRequest) returns (DemoResponse) {}
  rpc BidirectionalStreaming(stream DemoRequest) returns (stream DemoResponse) {}
}

message DemoRequest {
  int32 a = 1;
  int32 b = 2;
}

message DemoResponse {
  int32 result = 1;
}